examples/test/testpolicy7650.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7650
  namespace: namespace22
spec:
  podSelector:
    matchLabels:
      key46: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value38
          key41: value29
          key18: value32
      podSelector:
        matchLabels:
          key35: value10
          key32: value44
